[metadata]
name = bake-a-py
version = 0.1.1
author = derSuessmann
author_email = devel@dersuessmann.de
description = A simple cli Raspberry Pi imager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/derSuessmann/bake-a-py
project_urls =
    Bug Tracker = https://github.com/derSuessmann/bake-a-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: System :: Installation/Setup
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    tqdm
    requests
    Jinja2
    ruamel.yaml

[options.package_data]
    * = *.txt, firstrun.sh.j2

[options.entry_points]
console_scripts =
    bake-a-py = bake_a_py.cli:cli

[options.packages.find]
where = src
